Tidy code slightly